分析模板/2026.05.22/周六015_福伦丹vs威廉二世_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周六015 | 采集日期：2026-05-24

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 福伦丹 |
| 客队 | 威廉二世 |
| 比赛时间 | 2026-05-24 02:00 |
| 赛事 | 荷乙 |
| 让球 | -1 |
| 主队近况 | 近10场，2胜3平5负 进10球 失14球 胜率20% 赢盘率50% 大球率50% |
| 客队近况 | 近10场，8胜1平1负 进15球 失5球 胜率80% 赢盘率70% 大球率40% |
| 主队近况走势 | - |
| 主队盘路走势 | - |
| 客队近况走势 | - |
| 客队盘路走势 | - |
| 历史交锋 | 福伦丹 1胜0和5负 |
| 澳门推荐 |  |
| 澳门分析 |  |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.00, 3.45, 2.95),  # 竞*官*
    (2.45, 3.30, 2.63),  # 威**尔
    (2.45, 3.30, 2.80),  # 立*
    (2.32, 3.40, 2.57),  # **t3*5
    (2.45, 3.55, 2.65),  # I***rw**t*n
    (2.41, 3.40, 2.70),  # *冠
    (2.30, 3.30, 2.60),  # 易*博
    (2.40, 3.40, 2.80),  # 伟*
    (2.45, 3.30, 2.85),  # B**n
    (2.16, 3.49, 3.20),  # Pi****le平*
    (2.44, 3.55, 2.65),  # 10**t
    (2.45, 3.30, 2.87),  # C***l
    (2.38, 3.11, 2.63),  # 利*
    (2.40, 3.60, 2.75),  # U****t (优*客)
    (2.45, 3.30, 2.85),  # S***t**g**t (博*堂)
    (2.01, 3.35, 3.10),  # IBC**t (沙*)
    (2.11, 3.30, 2.92),  # M****on88 (明*)
    (1.95, 3.50, 2.98),  # 香**会
    (2.11, 3.30, 2.92),  # 12**t (壹*博)
    (2.45, 3.30, 2.63),  # 88******
    (2.43, 3.75, 2.75),  # 大巨*
    (2.18, 2.76, 3.05),  # 必*
    (2.50, 3.45, 2.60),  # 18**t
    (2.41, 3.50, 2.60),  # 1x**t
    (2.15, 3.40, 3.00),  # I***rt*ps
    (2.40, 3.50, 2.60),  # **t-at-H**e
    (2.25, 3.40, 2.85),  # **t3000
    (2.40, 3.45, 2.65),  # **tf**g
    (2.15, 3.50, 3.20),  # **tway(必*)
    (2.30, 3.40, 2.63),  # B***eS***ts
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.00, 3.45, 2.95),  # 竞*官*
    (2.15, 3.30, 3.00),  # 威**尔
    (2.25, 3.50, 3.00),  # 立*
    (2.20, 3.70, 3.00),  # **t3*5
    (2.25, 3.45, 2.95),  # I***rw**t*n
    (2.19, 3.50, 2.95),  # *冠
    (2.18, 3.50, 3.00),  # 易*博
    (2.15, 3.50, 3.13),  # 伟*
    (2.25, 3.50, 3.00),  # B**n
    (2.16, 3.58, 3.25),  # Pi****le平*
    (2.23, 3.55, 3.05),  # 10**t
    (2.45, 3.30, 2.87),  # C***l
    (2.16, 3.21, 2.87),  # 利*
    (2.25, 3.50, 3.05),  # U****t (优*客)
    (2.25, 3.50, 3.00),  # S***t**g**t (博*堂)
    (2.04, 3.30, 3.05),  # IBC**t (沙*)
    (2.04, 3.30, 3.05),  # M****on88 (明*)
    (2.02, 3.40, 2.90),  # 香**会
    (2.04, 3.30, 3.05),  # 12**t (壹*博)
    (2.15, 3.30, 3.00),  # 88******
    (2.33, 3.60, 3.00),  # 大巨*
    (2.08, 3.55, 3.20),  # 必*
    (2.15, 3.50, 3.05),  # 18**t
    (2.13, 3.50, 3.14),  # 1x**t
    (2.05, 3.45, 3.15),  # I***rt*ps
    (2.10, 3.50, 3.00),  # **t-at-H**e
    (2.20, 3.40, 2.95),  # **t3000
    (2.10, 3.50, 3.20),  # **tf**g
    (2.15, 3.50, 3.20),  # **tway(必*)
    (2.10, 3.30, 3.00),  # B***eS***ts
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 4.15,
    '平': 3.70,
    '负': 1.62
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 4.15
JC_DRAW = 3.70
JC_AWAY = 1.62

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (2.45, 3.30, 2.80)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (2.25, 3.50, 3.00)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = ""
```
