分析模板/2026.05.23/周六015_福伦丹vs威廉二世_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周六015 | 采集日期：2026-05-23

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 福伦丹 |
| 客队 | 威廉二世 |
| 比赛时间 | 2026-05-23 22:30 |
| 赛事 | 荷乙 |
| 让球 | -1 |
| 主队近况 | 近10场，2胜3平5负 进10球 失14球 胜率20% 赢盘率50% 大球率50% |
| 客队近况 | 近10场，8胜1平1负 进15球 失5球 胜率80% 赢盘率70% 大球率40% |
| 主队近况走势 | WLDLWL |
| 主队盘路走势 | WLWLWW |
| 客队近况走势 | LWWDWW |
| 客队盘路走势 | LWWLWW |
| 历史交锋 | 福伦丹 1胜0和5负 |
| 澳门推荐 | 福伦丹 贏 |
| 澳门分析 | 华伦丹首回合力挫威廉二世，阵中球员士气高涨，此番坐镇主场再战整体实力略逊一筹的威廉二世，华伦丹值得看好。 |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.00, 3.45, 2.95),  # 竞*官*
    (2.45, 3.30, 2.63),  # 威**尔
    (2.05, 3.40, 2.92),  # *门
    (2.45, 3.30, 2.80),  # 立*
    (2.32, 3.40, 2.57),  # **t3*5
    (2.45, 3.55, 2.65),  # I***rw**t*n
    (2.41, 3.40, 2.70),  # *冠
    (2.30, 3.30, 2.60),  # 易*博
    (2.40, 3.40, 2.80),  # 伟*
    (2.45, 3.30, 2.85),  # B**n
    (2.16, 3.49, 3.20),  # Pi****le平*
    (2.44, 3.55, 2.65),  # 10**t
    (2.45, 3.30, 2.87),  # C***l
    (2.38, 3.11, 2.63),  # 利*
    (2.40, 3.60, 2.75),  # U****t (优*客)
    (2.45, 3.30, 2.85),  # S***t**g**t (博*堂)
    (2.01, 3.35, 3.10),  # IBC**t (沙*)
    (2.11, 3.30, 2.92),  # M****on88 (明*)
    (1.95, 3.50, 2.98),  # 香**会
    (2.11, 3.30, 2.92),  # 12**t (壹*博)
    (2.45, 3.30, 2.63),  # 88******
    (2.43, 3.75, 2.75),  # 大巨*
    (2.18, 2.76, 3.05),  # 必*
    (2.50, 3.45, 2.60),  # 18**t
    (2.41, 3.50, 2.60),  # 1x**t
    (2.18, 3.55, 3.05),  # **ts**n
    (2.15, 3.40, 3.00),  # I***rt*ps
    (2.40, 3.50, 2.60),  # **t-at-H**e
    (2.25, 3.40, 2.85),  # **t3000
    (2.40, 3.45, 2.65),  # **tf**g
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.08, 3.40, 2.82),  # 竞*官*
    (2.15, 3.40, 3.00),  # 威**尔
    (2.05, 3.40, 2.92),  # *门
    (2.25, 3.50, 3.00),  # 立*
    (2.15, 3.70, 3.00),  # **t3*5
    (2.20, 3.55, 2.95),  # I***rw**t*n
    (2.25, 3.55, 2.80),  # *冠
    (2.14, 3.50, 3.10),  # 易*博
    (2.20, 3.60, 3.10),  # 伟*
    (2.25, 3.50, 3.00),  # B**n
    (2.25, 3.73, 3.12),  # Pi****le平*
    (2.21, 3.60, 3.05),  # 10**t
    (2.20, 3.60, 3.10),  # C***l
    (2.23, 3.22, 2.92),  # 利*
    (2.20, 3.60, 3.10),  # U****t (优*客)
    (2.25, 3.50, 3.00),  # S***t**g**t (博*堂)
    (2.26, 3.45, 2.71),  # IBC**t (沙*)
    (2.26, 3.45, 2.71),  # M****on88 (明*)
    (1.97, 3.45, 2.98),  # 香**会
    (2.26, 3.45, 2.71),  # 12**t (壹*博)
    (2.10, 3.40, 3.10),  # 88******
    (2.22, 3.60, 3.20),  # 大巨*
    (2.28, 3.70, 3.30),  # 必*
    (2.25, 3.70, 3.00),  # 18**t
    (2.17, 3.58, 3.00),  # 1x**t
    (2.18, 3.55, 3.05),  # **ts**n
    (2.20, 3.50, 3.05),  # I***rt*ps
    (2.10, 3.55, 2.90),  # **t-at-H**e
    (2.15, 3.50, 2.95),  # **t3000
    (2.20, 3.60, 3.00),  # **tf**g
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 4.40,
    '平': 3.78,
    '负': 1.57
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 4.40
JC_DRAW = 3.78
JC_AWAY = 1.57

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (2.05, 3.40, 2.92)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (2.05, 3.40, 2.92)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = "福伦丹 贏"
```
